objects/ssot__CareRequestDiagnosis__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareRequestCaseID__c</fullName>
        <label>Care Request Case</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestId__c</fullName>
        <label>Care Request</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeDescriptionText__c</fullName>
        <label>Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeTypeIdentifierText__c</fullName>
        <label>Code Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeTypeText__c</fullName>
        <label>Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisCodeId__c</fullName>
        <label>Diagnosis Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisCodeSetId__c</fullName>
        <label>Diagnosis Code Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisCodeSetObject__c</fullName>
        <label>Diagnosis Code Set Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisEffectiveDateTime__c</fullName>
        <label>Diagnosis Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisEndDateTime__c</fullName>
        <label>Diagnosis End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeCodeDescription__c</fullName>
        <label>Discharge Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeCodeTypeIdentifier__c</fullName>
        <label>Discharge Code Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeCodeType__c</fullName>
        <label>Discharge Code Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeCode__c</fullName>
        <label>Discharge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeDiagnosisCodeSetId__c</fullName>
        <label>Discharge Diagnostic Code Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeDiagnosisCode__c</fullName>
        <label>Discharge Diagnosis Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeDiagnosisEffectiveDateTime__c</fullName>
        <label>Discharge Diagnosis Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeDiagnosisEndDateTime__c</fullName>
        <label>Discharge Diagnosis End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DischargeDiagnosticCodeSetObject__c</fullName>
        <label>Discharge Diagnostic Code Set Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionId__c</fullName>
        <label>Health Condition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Diagnosis Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDiagnosisPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Diagnosis Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDischargeDiagnosisPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Discharge Diagnosis Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsModifiedDiagnosisPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Modified Diagnosis Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeDescription__c</fullName>
        <label>Modified Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeTypeIdentifier__c</fullName>
        <label>Modified Code Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeType__c</fullName>
        <label>Modified Code Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCode__c</fullName>
        <label>Modified Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDiagnosisCodeId__c</fullName>
        <label>Modified Diagnosis Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDiagnosisCodeSetObject__c</fullName>
        <label>Modified Diagnosis Code Set Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDiagnosisCodesetId__c</fullName>
        <label>Modified Diagnosis Codeset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDiagnosisEffectiveDate__c</fullName>
        <label>Modified Diagnosis Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedDiagnosisEndDate__c</fullName>
        <label>Modified Diagnosis End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576507639_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDiagnosis_CareRequestCase_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CareRequestDiagnosis_CareRequestCase_rel</relationshipLabel>
        <relationshipName>rel_1716576507639_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576509540_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDiagnosis_ModifiedDiagnos_rel</label>
        <referenceTo>ssot__HealthcareDiagnosis__dlm</referenceTo>
        <relationshipLabel>CareRequestDiagnosis_ModifiedDiagnos_rel</relationshipLabel>
        <relationshipName>rel_1716576509540_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576511228_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestDiagnosis_ModifiedDiagnos_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareRequestDiagnosis_ModifiedDiagnos_rel</relationshipLabel>
        <relationshipName>rel_1716576511228_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>